Not working menu

--- a/index.html
+++ b/index.html
@@ -14,57 +14,42 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:900" rel="stylesheet">
     <script src="js/respond.min.js"></script>
+
     <!-- font-family: 'Kaushan Script', cursive; -->
 </head>
 
 
 <body id="page-top">
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header page-scroll">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top"><img src="./img/MoGo.png" class="navbar__img"/></a>
+            <a class="navbar-brand" href="#"><img src="img/MoGo.png"/> </a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav pull-right">
-                <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-                <li class="hidden active">
-                    <a class="page-scroll" href="#page-top"></a>
-                </li>
-                <li class="">
-                    <a class="page-scroll" href="#about">About</a>
-                </li>
-                <li class="">
-                    <a class="page-scroll" href="#services">Service</a>
-                </li>
-                <li class="">
-                    <a class="page-scroll" href="#work">Work</a>
-                </li>
-                <li class="">
-                    <a class="page-scroll" href="#blog">Blog</a>
-                </li>
-                <li class="">
-                    <a class="page-scroll" href="#contact">Contact</a>
-                </li>
-                <li class="">
-                    <a class="page-scroll" href="#O"><img class="navbar__pic--cart"/></a>
-                </li>
-                <li class="">
-                    <a class="page-scroll" href="#O"><img class="navbar__pic--glass"/></a>
-                </li>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+            <ul class="nav navbar-nav navbar-right menu">
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Service</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#"><img src="img/pictograms/banner_shopping-cart.png"/> </a></li>
+                <li><a href="#"><img src="img/pictograms/banner_magnifying-glass.png"/> </a></li>
             </ul>
         </div>
-        <!-- /.navbar-collapse -->
     </div>
-    <!-- /.container -->
 </nav>
+
+
 
 <div class="container-fluid" id="banner">
     <img/>
@@ -1054,7 +1039,7 @@
         type="text/javascript">
 
 </script>
-
+<script src="js/nav.js"></script>
 </body>
 
 </html>
