--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <button type="button" class="navbar-toggle collapsed top-xs collapsed-blue" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -36,7 +36,7 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
-            <ul class="nav navbar-nav navbar-right menu">
+            <ul class="nav navbar-nav top-xs navbar-right menu">
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Service</a></li>
                 <li><a href="#work">Work</a></li>
@@ -1039,7 +1039,7 @@
         type="text/javascript">
 
 </script>
-<script src="js/nav.js"></script>
+
 </body>
 
 </html>
