New working menu

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 
-<body id="page-top">
+<body id="page-top" onload="draw();">
 
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
@@ -37,13 +37,15 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
             <ul class="nav navbar-nav top-xs navbar-right menu">
-                <li><a href="#about">About</a></li>
-                <li><a href="#services">Service</a></li>
-                <li><a href="#work">Work</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#"><img src="img/pictograms/banner_shopping-cart.png"/> </a></li>
-                <li><a href="#"><img src="img/pictograms/banner_magnifying-glass.png"/> </a></li>
+                <li><a  class="menu__link" href="#about">About</a>
+                </li>
+                <li><a class="menu__link" href="#services">Service</a></li>
+                <li><a class="menu__link" href="#work">Work</a></li>
+                <li><a class="menu__link" href="#blog">Blog</a></li>
+                <li><a class="menu__link" href="#contact">Contact</a></li>
+                <li><a class="menu__link" href="#"><img src="img/pictograms/banner_shopping-cart.png"/> </a></li>
+                <li><a class="menu__link" href="#"><img src="img/pictograms/banner_magnifying-glass.png"/> </a></li>
+                <li></li>
             </ul>
         </div>
     </div>
