deleted callback from google api

--- a/index.html
+++ b/index.html
@@ -1095,7 +1095,7 @@
 <script src="script.min.js"></script>
 
 <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5vPJd91DdZEZ2SGL9NvGUmD3kaeEB7a0&callback=initMap"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD5vPJd91DdZEZ2SGL9NvGUmD3kaeEB7a0"
         type="text/javascript">
 
 </script>
