--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
-    <meta name="viewport" content="width=device-width. initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Macopedia - TASK 2</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
