fixed margins in accordion

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                          <h4 class="panel-title">
                              <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
                                 aria-expanded="true" aria-controls="collapseOne">
-                                 <img src="img/pictograms/service2_pic1.png" alt="">Photography
+                                 <img src="img/pictograms/service2_pic1.png" alt=""><p>Photography</p>
                              </a>
                          </h4>
                      </div>
@@ -408,7 +408,7 @@
                          <h4 class="panel-title">
                              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                 <img src="img/pictograms/service2_pic2.png" alt="">Creativity
+                                 <img src="img/pictograms/service2_pic2.png" alt=""><p>Creativity</p>
                              </a>
                          </h4>
                      </div>
@@ -429,7 +429,7 @@
                          <h4 class="panel-title">
                              <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion"
                                 href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                 <img src="img/pictograms/service2_pic3.png" alt="">Web design
+                                 <img src="img/pictograms/service2_pic3.png" alt=""><p>Web design</p>
                              </a>
                          </h4>
                      </div>
