New sprite, fix button in FOOTER

--- a/index.html
+++ b/index.html
@@ -1004,9 +1004,9 @@
             </div>
             <img class="foot__1--line" src="img/blog_line.png"/>
             <div class="row foot__1--site">
-                <ul id="foot__1--site--sprite">
-                    <span class="foot__1--site--text">Follow Us: </span>
-                    <li id="dribble"><a target="_blank" href="http://dribbble.com"></a></li>
+                <span class="foot__1--site--text">Follow Us: </span>
+                <ul class="foot__1--site--sprite">
+                    <li id="dribble"><a target="_blank" href="http://dribbble.com"> </a></li>
                     <li id="facebook"><a target="_blank" href="http://www.facebook.pl"></a></li>
                     <li id="google"><a target="_blank" href="http://www.google.pl"></a></li>
                     <li id="instagram"><a target="_blank" href="http://www.instagram.com"></a></li>
