Fix bugs in MEET

--- a/index.html
+++ b/index.html
@@ -563,9 +563,9 @@
             </div>
             <div class="meet__team--people meet__team--people--1">
             </div>
-            <div class="row meet__name--xs">
-                <div class="row meet__name--xs--name">MATTEW DIX</div>
-                <div class="row meet__name--xs--work">Graphic Design</div>
+            <div class="meet__name--xs">
+                <p class="meet__name--xs--name">MATTEW DIX</p>
+                <p class="meet__name--xs--work">Graphic Design</p>
             </div>
         </div>
 
@@ -586,14 +586,16 @@
             <div class="meet__team--people meet__team--people--2">
             </div>
 
-            <div class="row meet__name--xs">
-                <div class="row meet__name--xs--name">CHRISTOPHER CAMPBELL</div>
-                <div class="row meet__name--xs--work">Branding/UX design</div>
+
+            <div class="meet__name--xs">
+                <p class="meet__name--xs--name">CHRISTOPHER CAMPBELL</p>
+                <p class="meet__name--xs--work">Branding/UX design</p>
             </div>
         </div>
 
 
         <div class="col-sm-4 col-xs-12">
+
             <div class="meet__team--back"></div>
             <div class="meet__team--background">
                 <div class="meet__team--imgs">
@@ -609,10 +611,11 @@
             </div>
             <div class="meet__team--people meet__team--people--3">
             </div>
-            <div class="row meet__name--xs">
-                <div class="row meet__name--xs--name">MICHAEL FERTIG</div>
-                <div class="row meet__name--xs--work">Developer</div>
-            </div>
+
+        </div>
+        <div class="meet__name--xs">
+            <p class="meet__name--xs--name">MICHAEL FERTIG</p>
+            <p class="meet__name--xs--work">Developer</p>
         </div>
     </div>
     <div class="row meet__name">
