Ready flex in LOG

--- a/index.html
+++ b/index.html
@@ -638,26 +638,34 @@
 
 <div class="container-fluid logos">
     <div class="container">
-        <div class="row logos__row">
-            <div class="col-md-2 col-xs-4">
-                <img class="img-responsive" src="img/logo1.png"/>
-            </div>
-            <div class="col-md-2 col-xs-4">
-                <img class="img-responsive" src="img/logo2.png"/>
-            </div>
-            <div class="col-md-2 col-xs-4">
-                <img class="img-responsive" src="img/logo3.png"/>
-            </div>
-            <div class="col-md-2 col-xs-4">
-                <img class="img-responsive" src="img/logo4.png"/>
-            </div>
-            <div class="col-md-2 col-xs-4">
-                <img class="img-responsive" src="img/logo5.png"/>
-            </div>
-            <div class="col-md-2 col-xs-4">
-                <img class="img-responsive" src="img/logo6.png"/>
-            </div>
+        <div class="row logos__conteiner">
+            <div class="logos__conteiner--item"><img src="img/logo1.png"/></div>
+            <div class="logos__conteiner--item"><img src="img/logo2.png"/></div>
+            <div class="logos__conteiner--item"><img src="img/logo3.png"/></div>
+            <div class="logos__conteiner--item"><img src="img/logo4.png"/></div>
+            <div class="logos__conteiner--item"><img src="img/logo5.png"/></div>
+            <div class="logos__conteiner--item"><img src="img/logo6.png"/></div>
         </div>
+        <!--<div class="row logos__row">
+            <div class="col-md-2 col-sm-4 col-xs-6">
+                <img src="img/logo1.png"/>
+            </div>
+            <div class="col-md-2 col-sm-4 col-xs-6">
+                <img src="img/logo2.png"/>
+            </div>
+            <div class="col-md-2 col-sm-4 col-xs-6">
+                <img src="img/logo3.png"/>
+            </div>
+            <div class="col-md-2 col-sm-4 col-xs-6">
+                <img src="img/logo4.png"/>
+            </div>
+            <div class="col-md-2 col-sm-4 col-xs-6">
+                <img src="img/logo5.png"/>
+            </div>
+            <div class="col-md-2 col-sm-4 col-xs-6">
+                <img src="img/logo6.png"/>
+            </div>
+        </div>-->
     </div>
 </div>
 
