--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
 
 <footer class="container-fluid foot" id="contact">
     <div class="container">
-        <div class="col-md-4 col-sm-12 foot__1">
+        <div class="row col-md-4 col-sm-12 foot__1">
             <p class="foot__1--logo">MoGo</p>
             <p class="foot__1--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                 incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrus exercitation ullamco
@@ -1013,7 +1013,7 @@
             </form>
         </div>
 
-        <div class="col-md-4 col-sm-12 foot__2">
+        <div class="row col-md-4 col-sm-12 foot__2">
             <p class="foot__2--title">BLOGS</p>
             <div class="row foot__2--row">
                 <div class="col-xs-5">
@@ -1046,8 +1046,8 @@
             </div>
         </div>
 
-        <div class="col-md-4 col-sm-12 foot__3">
-            <p class="foot__3--title">INSTAGRAM</p>
+        <div class="row col-md-4 col-sm-12 foot__3">
+            <p class="foot__2--title">INSTAGRAM</p>
 
             <div class="foot__3--insta">
                 <div class="row">
