fixed numbers for the 13th time

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 </div>
 
                 <div class="container-fluid" id="numbers">
-                    <div class="row container">
+                    <div class="row">
                         <div class="numbers__div col-xs-2 text-center">
                             <span class="numbers__div__count"> 42 </span>
                             <span class="numbers__div__description"> Web design projects </span>
