menu is now tracking user's movements

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </a>
 
             <nav class="menu">
-                <a class="page-scroll" href="#page-top"></a>
+                <a class="page-scroll visible-xs" href="#banner"><img src="./img/MoGo.png"/></a>
                 <a class="page-scroll" href="#about">About</a>
                 <a class="page-scroll" href="#services">Service</a>
                 <a class="page-scroll" href="#work">Work</a>
