--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 
 
-<body id="page-top" onload="draw();">
+<body id="page-top" data-spy="scroll" data-target=".navbar" data-offset="50">
 
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="nav navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed top-xs collapsed-blue" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
