--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <script src="js/respond.min.js"></script>
     <!-- font-family: 'Kaushan Script', cursive; -->
 
+    <!-- [if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
+    <![endif-->
 </head>
 
 
@@ -452,81 +455,77 @@
      </div>
 
  </div>
- <div class="container-fluid carousel1">
+ <div class="container-fluid carousel1 carousel1--background1">
      <div class="container">
-
          <div id="carousel-10" class="carousel slide" data-ride="carousel">
-             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <div class="carousel1__slider--page">
-                        <div class="col-sm-2 col-xs-12 carousel1__slider--page--img">
+                    <div class="carousel1__slider">
+                        <div class="col-sm-2 col-xs-12 carousel1__slider--icon">
                             <img src="img/pictograms/quote_pic.png"/>
                         </div>
                         <div class="col-sm-7 col-xs-12">
-                            <div class="row carousel1__slider--page--text">
+                            <span class="row carousel1__slider--text">
                                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt
                                 ut laboer
                                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
-                            </div>
-                            <div class="row carousel1__slider--page--name">
+                            </span>
+                            <div class="row carousel1__slider--name">
                                 <img src="img/pictograms/meet_rectangle.png"/>
-                                <span class="carousel1__slider--page--name--name">John Doe</span>
+                                <span>John Doe</span>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="item">
-                    <div class="carousel1__slider--page">
-                        <div class="col-sm-2 col-xs-12 carousel1__slider--page--img">
+                    <div class="carousel1__slider">
+                        <div class="col-sm-2 col-xs-12  carousel1__slider--icon">
                             <img src="img/pictograms/quote_pic.png"/>
                         </div>
                         <div class="col-sm-7 col-xs-12">
-                            <div class="row carousel1__slider--page--text">
+                            <span class="row carousel1__slider--text">
                                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt
                                 ut laboer
                                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
-                            </div>
-                            <div class="row carousel1__slider--page--name">
+                            </span>
+                            <div class="row carousel1__slider--name">
                                 <img src="img/pictograms/meet_rectangle.png"/>
-                                <span class="carousel1__slider--page--name--name">John Doe</span>
+                                <span>John Doe</span>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="item">
-                    <div class="carousel1__slider--page">
-                        <div class="col-sm-2 col-xs-12 carousel1__slider--page--img">
+                    <div class="carousel1__slider">
+                        <div class="col-sm-2 col-xs-12  carousel1__slider--icon">
                             <img src="img/pictograms/quote_pic.png"/>
                         </div>
                         <div class="col-sm-7 col-xs-12">
-                            <div class="row carousel1__slider--page--text">
+                            <span class="row carousel1__slider--text">
                                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                 incididunt
                                 ut laboer
                                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
-                            </div>
-                            <div class="row carousel1__slider--page--name">
+                            </span>
+                            <div class="row carousel1__slider--name">
                                 <img src="img/pictograms/meet_rectangle.png"/>
-                                <span class="carousel1__slider--page--name--name">John Doe</span>
+                                <span>John Doe</span>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <!-- Left and right controls -->
             <a class="left carousel-control" href="#carousel-10" data-slide="prev">
                 <img src="img/pictograms/testimontial_arrowleft.png"/>
 
             </a>
             <a class="right carousel-control" href="#carousel-10" data-slide="next">
                 <img src="img/pictograms/testimontial_arrowright.png"/>
-
             </a>
         </div>
 
@@ -534,7 +533,7 @@
 </div>
 
 
-<div class="container meet">
+<section class="container meet">
     <div class="page-title">
         <h3 class="page-title__main">Who we are</h3>
         <h2 class="page-title__subtitle">MEET OUR TEAM</h2>
@@ -545,7 +544,7 @@
             nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </p>
     </div>
-    <div class="row meet__team">
+    <article class="row meet__team">
         <div class="col-sm-4 col-xs-12">
             <div class="meet__team--back">
             </div>
@@ -585,17 +584,13 @@
             </div>
             <div class="meet__team--people meet__team--people--2">
             </div>
-
-
             <div class="meet__name--xs">
                 <p class="meet__name--xs--name">CHRISTOPHER CAMPBELL</p>
                 <p class="meet__name--xs--work">Branding/UX design</p>
             </div>
         </div>
 
-
         <div class="col-sm-4 col-xs-12">
-
             <div class="meet__team--back"></div>
             <div class="meet__team--background">
                 <div class="meet__team--imgs">
@@ -611,15 +606,13 @@
             </div>
             <div class="meet__team--people meet__team--people--3">
             </div>
-
-
         <div class="meet__name--xs">
             <p class="meet__name--xs--name">MICHAEL FERTIG</p>
             <p class="meet__name--xs--work">Developer</p>
         </div>
         </div>
-    </div>
-    <div class="row meet__name">
+    </article>
+    <article class="row meet__name">
         <div class="col-sm-4">
             <div class="row meet__name--name">MATTEW DIX</div>
             <div class="row meet__name--work">Graphic Design</div>
@@ -633,24 +626,24 @@
             <div class="row meet__name--name">MICHAEL FERTIG</div>
             <div class="row meet__name--work">Developer</div>
         </div>
-    </div>
-</div>
+    </article>
+</section>
 
 
-<div class="container-fluid logos">
+<section class="container-fluid logos">
     <div class="container">
-        <div class="row logos__conteiner">
+        <article class="row logos__conteiner">
             <div class="logos__conteiner--item"><img src="img/logo1.png"/></div>
             <div class="logos__conteiner--item"><img src="img/logo2.png"/></div>
             <div class="logos__conteiner--item"><img src="img/logo3.png"/></div>
             <div class="logos__conteiner--item"><img src="img/logo4.png"/></div>
             <div class="logos__conteiner--item"><img src="img/logo5.png"/></div>
             <div class="logos__conteiner--item"><img src="img/logo6.png"/></div>
-        </div>
+        </article>
     </div>
-</div>
+</section>
 
-<div class="container-fluid work" id="work">
+<section class="container-fluid work" id="work">
     <div class="page-title text-center">
         <h3 class="page-title__main">What we do</h3>
         <h2 class="page-title__subtitle">SOME OF OUR WORK</h2>
@@ -662,7 +655,7 @@
             consequat.
         </p>
     </div>
-    <div class="row work__picture">
+    <article class="row work__picture">
         <div class="col-sm-3 col-xs-6">
             <div class="work__picture--img">
                 <img src="img/work11.png"/>
@@ -682,8 +675,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-3 col-xs-6">
 
+        <div class="col-sm-3 col-xs-6">
             <div class="work__picture--img">
                 <img src="img/work21.png"/>
                 <div class="work__picture--overlay">
@@ -702,6 +695,7 @@
                 </div>
             </div>
         </div>
+
         <div class="col-sm-3 col-xs-6">
             <div class="work__picture--img">
                 <img src="img/work3.png"/>
@@ -732,66 +726,64 @@
             </div>
 
         </div>
-    </div>
-</div>
+    </article>
+</section>
 
-
-<div class="container testimontial">
-
+<section class="container carousel1 carousel1--background2">
     <div id="carousel-11" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="item active">
-                <div class="carousel1__slider--page">
-                    <div class="col-sm-2 col-xs-10 testimontial__slider--page--img">
+                <div class="carousel1__slider">
+                    <div class="col-sm-2 col-xs-10 carousel1__slider--img">
                         <img src="img/testimontial_1.png"/>
                     </div>
-                    <div class="col-sm-7 col-xs-10">
-                        <div class="row testimontial__slider--page--text">
+                    <div class="col-sm-7 col-xs-12">
+                        <span class="row carousel1__slider--text">
                             "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             ut laboer
                             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
-                        </div>
-                        <div class="row testimontial__slider--page--name">
+                        </span>
+                        <div class="row carousel1__slider--name">
                             <img src="img/pictograms/meet_rectangle.png"/>
-                            <span class="testimontial__slider--page--name--name">Joshua Earle</span>
+                            <span>Joshua Earle</span>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="item">
-                <div class="carousel1__slider--page">
-                    <div class="col-sm-2 col-xs-10 testimontial__slider--page--img">
+                <div class="carousel1__slider">
+                    <div class="col-sm-2 col-xs-10  carousel1__slider--img">
                         <img src="img/testimontial_1.png"/>
                     </div>
-                    <div class="col-sm-7 col-xs-10">
-                        <div class="row testimontial__slider--page--text">
+                    <div class="col-sm-7 col-xs-12">
+                        <span class="row carousel1__slider--text">
                             "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce venenatis ullamcorper
                             malesuada.
                             Aliquam non lorem a sapien malesuada venenatis. Ut a metus velit. Quisque viverra augue."
-                        </div>
-                        <div class="row testimontial__slider--page--name">
+                        </span>
+                        <div class="row carousel1__slider--name">
                             <img src="img/pictograms/meet_rectangle.png"/>
-                            <span class="testimontial__slider--page--name--name">Joshua Earle 2</span>
+                            <span>Joshua Earle 2</span>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="item">
-                <div class="carousel1__slider--page">
-                    <div class="col-sm-2 col-xs-10 testimontial__slider--page--img">
+                <div class="carousel1__slider">
+                    <div class="col-sm-2 col-xs-10 carousel1__slider--img">
                         <img src="img/testimontial_1.png"/>
                     </div>
-                    <div class="col-sm-7 col-xs-10">
-                        <div class="row  testimontial__slider--page--text">
+                    <div class="col-sm-7 col-xs-12">
+                        <span class="row  carousel1__slider--text">
                             "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fermentum condimentum iaculis.
                             Vestibulum sed purus suscipit, suscipit massa vitae, rutrum quam. Vivamus vehicula ornare
                             tincidunt."
-                        </div>
-                        <div class="row testimontial__slider--page--name">
+                        </span>
+                        <div class="row carousel1__slider--name">
                             <img src="img/pictograms/meet_rectangle.png"/>
-                            <span class="testimontial__slider--page--name--name">Joshua Earle 3</span>
+                            <span>Joshua Earle 3</span>
                         </div>
                     </div>
                 </div>
@@ -807,10 +799,10 @@
 
         </a>
     </div>
-</div>
+</section>
 
 
-<div class="container-fluid say">
+<section class="container-fluid say">
     <img class="say__background" src="img/people_back.png"/>
     <div class="container">
         <div class="page-title">
@@ -818,7 +810,7 @@
             <h2 class="page-title__subtitle">WHAT PEOPLE SAY</h2>
             <span class="page-title__bar"></span>
         </div>
-        <div class="row say__client">
+        <article class="row say__client">
             <div class="col-md-2 col-xs-4 say__client--img">
                 <img src="img/people1.png"/>
             </div>
@@ -854,8 +846,8 @@
                 </div>
             </div>
 
-        </div>
-        <div class="row say__client">
+        </article>
+        <article class="row say__client">
             <div class="col-md-2 col-xs-4 say__client--img">
                 <img src="img/people3.png"/>
             </div>
@@ -890,20 +882,19 @@
                     <span>Lorem ipsum dolar sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua. Ut enim ad minim.</span>
                 </div>
             </div>
-        </div>
+        </article>
     </div>
-</div>
+</section>
 
-<div class="container blog" id="blog">
+<section class="container blog" id="blog">
     <div class="page-title">
         <h3 class="page-title__main">Our stories</h3>
         <h2 class="page-title__subtitle">LATEST BLOG</h2>
         <span class="page-title__bar"></span>
     </div>
 
-    <div class="row blog__img">
-
-        <div class="col-sm-4 col-xs-12 blog__news">
+    <section class="row blog__img">
+        <article class="col-sm-4 col-xs-12 blog__news">
             <figure class="row">
                 <img class="img-responsive" src="img/blog1.png"/>
                 <figcaption>
@@ -921,9 +912,9 @@
                 <img src="img/pictograms/blog_speech.png">
                 <span>17</span>
             </div>
-        </div>
+        </article>
 
-        <div class="col-sm-4 col-xs-12 blog__news">
+        <article class="col-sm-4 col-xs-12 blog__news">
             <figure class="row">
                 <img class="img-responsive" src="img/blog2.png"/>
                 <figcaption>
@@ -941,9 +932,9 @@
                 <img src="img/pictograms/blog_speech.png">
                 <span>42</span>
             </div>
-        </div>
+        </article>
 
-        <div class="col-sm-4 col-xs-12 blog__news">
+        <article class="col-sm-4 col-xs-12 blog__news">
             <figure class="row">
                 <img class="img-responsive" src="img/blog3.png"/>
                 <figcaption>
@@ -961,11 +952,11 @@
                 <img src="img/pictograms/blog_speech.png">
                 <span>98</span>
             </div>
-        </div>
-    </div>
-</div>
+        </article>
+    </section>
+</section>
 
-<div class="container-fluid map">
+<section class="container-fluid map">
     <a id="myBtn">
         <img class="map--back" src="img/map_back.png"/>
         <div class="map__inside">
@@ -980,7 +971,7 @@
             <div id="map"></div>
         </div>
     </div>
-</div>
+</section>
 
 
 <footer class="container-fluid foot" id="contact">
