included sections and got rid of importants

--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
 
         <div class="site-content">
             <div class="container-fluid site-wrapper">
-                <div class="container-fluid" id="banner">
+                <section class="container-fluid" id="banner">
                     <img src="./img/banner_bg.png"/>
                     <div class="row text-center banner__info">
                         <div class="col-xs-12">
                             <div class="banner__info--first">
-                                Creative Template
+                                <p class = "title1">Creative Template</p>
                             </div>
                             <div class="banner__info--second">
-                                Welcome <br/> to mogo
+                                <p class = "title2">Welcome <br/> to mogo</p>
                             </div>
                             <span class="banner__info__bar"></span></br>
                             <button type="button" class="banner__info__button btn-default">Learn more</button>
@@ -114,9 +114,9 @@
 
                     </div>
 
-                </div>
+                </section>
 
-                <div class="container-fluid" id="about">
+                <section class="container-fluid" id="about">
                     <div class="page-title text-center">
                         <h3 class="page-title__main">What we do</h3>
                         <h2 class="page-title__subtitle">Story about us</h2>
@@ -171,9 +171,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </section>
 
-                <div class="container-fluid" id="numbers">
+                <section class="container-fluid" id="numbers">
                     <div class="row">
                         <div class="numbers__div col-xs-2 text-center">
                             <span class="numbers__div__count"> 42 </span>
@@ -200,9 +200,9 @@
                             <span class="numbers__div__description"> Members </span>
                         </div>
                     </div>
-                </div>
+                </section>
 
-                <div class="container-fluid" id="services">
+                <section class="container-fluid" id="services">
                     <div class="page-title text-center">
                         <h3 class="page-title__main">We work with</h3>
                         <h2 class="page-title__subtitle">Amazing services</h2>
@@ -276,10 +276,10 @@
                     </div>
 
 
-                </div>
+                </section>
 
 
-                <div class="container-fluid" id="design">
+                <section class="container-fluid" id="design">
                     <div class="row text-center design__intro">
                         <div class="col-xs-12">
 
@@ -301,9 +301,9 @@
                             <img src="img/feature_phone.png" class="img-responsive" alt="">
                         </div>
                     </div>
-                </div>
+                </section>
 
-                <div class="container-fluid" id="service">
+                <section class="container-fluid" id="service">
                     <div class="page-title text-center">
                         <h3 class="page-title__main">Service</h3>
                         <h2 class="page-title__subtitle">What we do</h2>
@@ -391,8 +391,8 @@
 
                     </div>
 
- </div>
- <div class="container-fluid carousel1 carousel1--background1">
+ </section>
+ <section class="container-fluid carousel1 carousel1--background1">
      <div class="container">
          <div id="carousel-10" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
@@ -467,7 +467,7 @@
         </div>
 
                     </div>
-                </div>
+                </section>
 
 
 <section class="container meet">
