quick fix for the accordion

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                     </div>
                 </section>
 
-                <section class="container-fluid" id="service">
+                <section class="container" id="service">
                     <div class="page-title text-center">
                         <h3 class="page-title__main">Service</h3>
                         <h2 class="page-title__subtitle">What we do</h2>
