--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                 </section>
 
-                <section class="container-fluid" id="about">
+                <!--<section class="container-fluid" id="about">
                     <div class="page-title text-center">
                         <h3 class="page-title__main">What we do</h3>
                         <h2 class="page-title__subtitle">Story about us</h2>
@@ -171,8 +171,57 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section>-->
 
+                <section id="about" class="about">
+                    <div class="container">
+                        <div class="page-title text-center">
+                            <h3 class="page-title__main">What we do</h3>
+                            <h2 class="page-title__subtitle">Story about us</h2>
+                            <span class="page-title__bar"></span>
+                            <p class="page-title__text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            </p>
+                        </div>
+                        <div class="row about__gallery">
+                            <div class="col-md-4 col-sm-4">
+                                <div class="about__gallery__item">
+                                    <a class="about__gallery__item__overlay" href="#">
+								<span class="about__gallery__item__overlay__content content">
+                                    <img class="about__gallery__item__overlay__content content__icon icon" src="./img/pictograms/aboutus_pic1_icon.png" alt="">
+									Super team
+								</span>
+                                        <img src="./img/aboutus_pic1.png" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-sm-4">
+                                <div class="about__gallery__item">
+                                    <a class="about__gallery__item__overlay" href="#">
+								<span class="about__gallery__item__overlay__content content">
+                                    <img class="about__gallery__item__overlay__content content__icon icon" src="./img/pictograms/aboutus_pic1_icon.png" alt="">
+									Super team
+								</span>
+                                        <img src="./img/aboutus_pic2.png" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-sm-4">
+                                <div class="about__gallery__item">
+                                    <a class="about__gallery__item__overlay" href="#">
+								<span class="about__gallery__item__overlay__content content">
+                                    <img class="about__gallery__item__overlay__content content__icon icon" src="./img/pictograms/aboutus_pic1_icon.png" alt="">
+									Super team
+								</span>
+                                        <img src="./img/aboutus_pic3.png" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
                 <section class="container-fluid" id="numbers">
                     <div class="row">
                         <div class="numbers__div col-xs-2 text-center">
