New section meet, without media

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                                 nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                             </p>
                         </div>
+
                         <div class="row about__gallery">
                             <div class="col-md-4 col-sm-4">
                                 <div class="about__gallery__item">
@@ -472,74 +473,60 @@
             nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </p>
     </div>
-    <article class="row meet__team">
-        <div class="col-sm-4 col-xs-12">
-            <div class="meet__team--back">
-            </div>
-            <div class="meet__team--background">
-                <div class="meet__team--imgs">
-                    <a class="meet__team--img" target="_blank" href="http://www.facebook.com"><img
-                            src="img/pictograms/meet_facebook.png"/></a>
-                    <a class="meet__team--img" target="_blank" href="http://twitter.com"><img
-                            src="img/pictograms/meet_twitter_white.png"/></a>
-                    <a class="meet__team--img" target="_blank" href="http://www.pinterest.com"><img
-                            src="img/pictograms/meet_pinterest_white.png"/></a>
-                    <a class="meet__team--img" target="_blank" href="http://www.instagram.com"><img
-                            src="img/pictograms/meet_instagram_white.png"/></a>
+
+    <div class="row meet__gallery">
+        <div class="col-md-4 col-sm-4">
+            <div class="meet__gallery__item">
+                <div class="meet__gallery__item__overlay">
+								<span class="meet__gallery__item__overlay__content content">
+                                    <a class="meet__team--img" target="_blank" href="http://www.facebook.com"><img class="meet__gallery__item__overlay__content content__icon icon" src="img/pictograms/meet_facebook.png" alt=""></a>
+                                    <a class="meet__team--img" target="_blank" href="http://twitter.com"><img class="meet__gallery__item__overlay__content content__icon icon" src="img/pictograms/meet_twitter_white.png" alt=""></a>
+                                    <a class="meet__team--img" target="_blank" href="http://www.pinterest.com"><img class="meet__gallery__item__overlay__content content__icon icon"  src="img/pictograms/meet_pinterest_white.png" alt=""></a>
+                                    <a class="meet__team--img" target="_blank" href="http://www.instagram.com"><img class="meet__gallery__item__overlay__content content__icon icon" src="img/pictograms/meet_instagram_white.png" alt=""></a>
+								</span>
+                    <img src="./img/meet_img_1.png" alt="">
                 </div>
-            </div>
-            <div class="meet__team--people meet__team--people--1">
             </div>
             <div class="meet__name--xs">
                 <p class="meet__name--xs--name">MATTEW DIX</p>
                 <p class="meet__name--xs--work">Graphic Design</p>
             </div>
         </div>
-
-        <div class="col-sm-4 col-xs-12">
-            <div class="meet__team--back"></div>
-            <div class="meet__team--background">
-                <div class="meet__team--imgs">
-                    <a class="meet__team--img" target="_blank" href="http://www.facebook.com"><img
-                            src="img/pictograms/meet_facebook.png"/></a>
-                    <a class="meet__team--img" target="_blank" href="http://twitter.com"><img
-                            src="img/pictograms/meet_twitter_white.png"/></a>
-                    <a class="meet__team--img" target="_blank" href="http://www.pinterest.com"><img
-                            src="img/pictograms/meet_pinterest_white.png"/></a>
-                    <a class="meet__team--img" target="_blank" href="http://www.instagram.com"><img
-                            src="img/pictograms/meet_instagram_white.png"/></a>
+        <div class="col-md-4 col-sm-4">
+            <div class="meet__gallery__item">
+                <div class="meet__gallery__item__overlay">
+								<span class="meet__gallery__item__overlay__content content">
+                                    <a class="meet__team--img" target="_blank" href="http://www.facebook.com"><img class="meet__gallery__item__overlay__content content__icon icon" src="img/pictograms/meet_facebook.png" alt=""></a>
+                                    <a class="meet__team--img" target="_blank" href="http://twitter.com"><img class="meet__gallery__item__overlay__content content__icon icon" src="img/pictograms/meet_twitter_white.png" alt=""></a>
+                                    <a class="meet__team--img" target="_blank" href="http://www.pinterest.com"><img class="meet__gallery__item__overlay__content content__icon icon"  src="img/pictograms/meet_pinterest_white.png" alt=""></a>
+                                    <a class="meet__team--img" target="_blank" href="http://www.instagram.com"><img class="meet__gallery__item__overlay__content content__icon icon" src="img/pictograms/meet_instagram_white.png" alt=""></a>
+								</span>
+                    <img src="./img/meet_img_2.png" alt="">
                 </div>
-            </div>
-            <div class="meet__team--people meet__team--people--2">
             </div>
             <div class="meet__name--xs">
-                <p class="meet__name--xs--name">CHRISTOPHER CAMPBELL</p>
-                <p class="meet__name--xs--work">Branding/UX design</p>
+                <p class="meet__name--xs--name">MICHAEL FERTIG</p>
+                <p class="meet__name--xs--work">Developer</p>
             </div>
         </div>
-
-        <div class="col-sm-4 col-xs-12">
-            <div class="meet__team--back"></div>
-            <div class="meet__team--background">
-                <div class="meet__team--imgs">
-                    <a class="meet__team--img" target="_blank" href="http://www.facebook.com"><img
-                            src="img/pictograms/meet_facebook.png"/></a>
-                    <a class="meet__team--img" target="_blank" href="http://twitter.com"><img
-                            src="img/pictograms/meet_twitter_white.png"/></a>
-                    <a class="meet__team--img" target="_blank" href="http://www.pinterest.com"><img
-                            src="img/pictograms/meet_pinterest_white.png"/></a>
-                    <a class="meet__team--img" target="_blank" href="http://www.instagram.com"><img
-                            src="img/pictograms/meet_instagram_white.png"/></a>
+        <div class="col-md-4 col-sm-4">
+            <div class="meet__gallery__item">
+                <div class="meet__gallery__item__overlay">
+								<span class="meet__gallery__item__overlay__content content">
+                                    <a class="meet__team--img" target="_blank" href="http://www.facebook.com"><img class="meet__gallery__item__overlay__content content__icon icon" src="img/pictograms/meet_facebook.png" alt=""></a>
+                                    <a class="meet__team--img" target="_blank" href="http://twitter.com"><img class="meet__gallery__item__overlay__content content__icon icon" src="img/pictograms/meet_twitter_white.png" alt=""></a>
+                                    <a class="meet__team--img" target="_blank" href="http://www.pinterest.com"><img class="meet__gallery__item__overlay__content content__icon icon"  src="img/pictograms/meet_pinterest_white.png" alt=""></a>
+                                    <a class="meet__team--img" target="_blank" href="http://www.instagram.com"><img class="meet__gallery__item__overlay__content content__icon icon" src="img/pictograms/meet_instagram_white.png" alt=""></a>
+								</span>
+                    <img src="./img/meet_img_3.png" alt="">
                 </div>
             </div>
-            <div class="meet__team--people meet__team--people--3">
+            <div class="meet__name--xs">
+                <p class="meet__name--xs--name">MICHAEL FERTIG</p>
+                <p class="meet__name--xs--work">Developer</p>
             </div>
-        <div class="meet__name--xs">
-            <p class="meet__name--xs--name">MICHAEL FERTIG</p>
-            <p class="meet__name--xs--work">Developer</p>
         </div>
-        </div>
-    </article>
+    </div>
     <article class="row meet__name">
         <div class="col-sm-4">
             <div class="row meet__name--name">MATTEW DIX</div>
@@ -555,6 +542,7 @@
             <div class="row meet__name--work">Developer</div>
         </div>
     </article>
+
 </section>
 
 
